# Box2D-cocos2d-x

./: .gitignore  README.md
Box2D/: CMakeLists.txt  Makefile  build.sh  build_android.sh  build_iosmac.sh  build_linux.sh
Box2D/Android/: build_android.sh
Box2D/Android/jni/: Android.mk  Application.mk
Box2D/Box2D.xcodeproj/: project.pbxproj
Box2D/Box2D.xcodeproj/project.xcworkspace/xcuserdata/guanghui.xcuserdatad/: UserInterfaceState.xcuserstate
Box2D/Box2D.xcodeproj/xcuserdata/guanghui.xcuserdatad/xcschemes/: Box2D.xcscheme  xcschememanagement.plist
Box2D/prebuilt/android/: Android.mk
